--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <div class="ms-lg-3 d-flex social-links">
                     <a href="#" class="text-white me-2" aria-label="Instagram"><i class='bx bxl-instagram'></i></a>
                     <a href="#" class="text-white me-2" aria-label="Facebook"><i class='bx bxl-facebook'></i></a>
-                    <a href="#" class="text-white me-2" aria-label="GitHub"><i class='bx bxl-github'></i></a>
-                    <a href="#" class="text-white" aria-label="LinkedIn"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://github.com/Majd0711" class="text-white me-2" aria-label="GitHub" target="_blank"><i class='bx bxl-github'></i></a>
+                    <a href="https://www.linkedin.com/in/majd-eddine-benzbair-3a100b35b" class="text-white" aria-label="LinkedIn" target="_blank"><i class='bx bxl-linkedin'></i></a>
                 </div>
             </div>
         </div>
@@ -422,8 +422,8 @@
             <div class="social-links mb-4">
                 <a href="#" aria-label="Instagram"><i class='bx bxl-instagram'></i></a>
                 <a href="#" aria-label="Facebook"><i class='bx bxl-facebook'></i></a>
-                <a href="#" aria-label="GitHub"><i class='bx bxl-github'></i></a>
-                <a href="#" aria-label="LinkedIn"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/Majd0711" aria-label="GitHub" target="_blank"><i class='bx bxl-github'></i></a>
+                <a href="https://www.linkedin.com/in/majd-eddine-benzbair-3a100b35b" aria-label="LinkedIn" target="_blank"><i class='bx bxl-linkedin'></i></a>
             </div>
             <p class="mb-0">Copyright &copy; <span id="currentYear"></span> | Designed by Majd Eddine Benzbair</p>
         </div>
